--- a/src/styles.css
+++ b/src/styles.css
@@ -148,6 +148,7 @@ code {
   gap: 10px;
   margin-top: 20px;
   color: black;
+  font-weight: bold;
 }
 
 /* Dark mode */
@@ -187,6 +188,10 @@ code {
 
 .dark-mode .game-controls button:hover {
   background-color: #333;
+}
+
+.dark-mode .game-info {
+  color: #f1f1f1;
 }
 
 .dark-mode-toggle {
